# PRO290

./: .gitignore  README.md  docker-compose.yml  git.ignore  test.js
PostsAPI_Mongo/: Dockerfile  pom.xml
PostsAPI_Mongo/PostsAPI/: pom.xml
consumer/: dockerfile  index.js  package-lock.json  package.json
front_service/: .gitignore  app.js  dockerfile  package-lock.json  package.json
front_service/public-flutter/: pubspec.yaml
front_service/public-flutter/.dart_tool/: package_config.json  package_config_subset
front_service/public-flutter/android/: local.properties
front_service/public-flutter/lib/: main.dart
front_service/public_flutter/: pubspec.yaml
front_service/routes/: index.js
frontend/: .flutter-plugins  .flutter-plugins-dependencies  Dockerfile  createUser.html  index.html  locationposts.html  logIn.html  messages.html  profile.html  pubspec.yaml
frontend/.dart_tool/: package_config.json  package_config_subset
frontend/android/: local.properties
frontend/lib/: main.dart
frontend/stylesheets/: style.css
messageservicejs/: Dockerfile  index.js  package-lock.json  package.json
post_service/: Cargo.toml  Dockerfile  pom.xml
post_service/src/: main.rs
postservicejs/: index.js
user_service/: .gitignore  Cargo.toml  Rocket.toml  dockerfile
user_service/src/: main.rs
user_service/src/dal/: image.rs  imagedb.rs  mod.rs  userdb.rs
user_service/src/models/: email.rs  forms.rs  login.rs  mod.rs  producer.rs  public_user.rs  queue.rs  search.rs  token.rs  update.rs  user.rs
user_service/src/routes/: user_routes.rs
user_service/src/utils/: utils.rs
(+683 files in other folders)
