[package]
name = "user_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.8.0"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
bson = "2.3"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
rocket-multipart-form-data = "0.10.7"
argon2 = "0.5.3"
jsonwebtoken = "9.3.0"
chrono = "0.4"